Convert OBS List in approbiate entity structures